--- a/tf_learn/tf_structer.ipynb
+++ b/tf_learn/tf_structer.ipynb
@@ -2,13 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "206"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "import tensorflow as tf\n"
+    "import tensorflow as tf\n",
+    "input_placeholder = tf.placeholder(tf.int32)\n",
+    "one_node = tf.constant(2)\n",
+    "two_node = tf.constant(3)\n",
+    "sum_node = tf.add(one_node, two_node)\n",
+    "test_node = one_node * input_placeholder + two_node * one_node\n",
+    "sess = tf.Session()\n",
+    "sess.run(test_node, feed_dict={input_placeholder: 100})\n"
    ]
   }
  ],
