--- a/tf_learn/tf_structer.ipynb
+++ b/tf_learn/tf_structer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -10,10 +10,10 @@
     {
      "data": {
       "text/plain": [
-       "6.0"
+       "206"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -27,11 +27,7 @@
     "test_node = one_node * input_placeholder + two_node * one_node\n",
     "sess = tf.Session()\n",
     "sess.run(test_node, feed_dict={input_placeholder: 100})\n",
-    "\n",
-    "#var = tf.get_variable('myvar',[])\n",
-    "ass = tf.assign(var, 6)\n",
-    "sess.run(ass)\n",
-    "sess.run(var)\n"
+    "\n"
    ]
   },
   {
@@ -69,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
@@ -86,7 +82,10 @@
       "50000 1.76579e-09\n",
       "60000 3.48201e-11\n",
       "70000 4.86367e-12\n",
-      "80000 1.15108e-10\n"
+      "80000 1.15108e-10\n",
+      "90000 2.05205e-11\n",
+      "true variable 0.405705,0.565199\n",
+      "learned variable 0.405682,0.565213\n"
      ]
     }
    ],
