longest no repeat

--- a/daily_prac_leetcode/longest_norepeat_str.ipynb
+++ b/daily_prac_leetcode/longest_norepeat_str.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -12,17 +12,7 @@
      "output_type": "stream",
      "text": [
       "['p', 'w', 'd', 'w', 'p', 'd']\n",
-      "1\n",
-      "{}\n",
-      "0\n",
-      "{'w': 0}\n",
-      "1\n",
-      "{}\n",
-      "0\n",
-      "{'w': 0}\n",
-      "1\n",
-      "{}\n",
-      "2\n"
+      "3\n"
      ]
     }
    ],
@@ -33,11 +23,25 @@
     "        :type s: str\n",
     "        :rtype: int\n",
     "        \"\"\"\n",
+    "        start, nlen = -1, 0\n",
+    "        dict ={}\n",
+    "        arr = list(s)\n",
+    "        for i in range(len(arr)):\n",
+    "            if dict.has_key(arr[i]) and dict[arr[i]] > start:\n",
+    "                start = dict[arr[i]]\n",
+    "            dict[arr[i]] = i\n",
+    "            nlen = max(nlen, i - start)\n",
+    "        return nlen\n",
     "if \"__main__\" == __name__:\n",
     "    s = 'pwdwpd'\n",
     "    print list(s)\n",
     "    h = {}\n",
+    "    p = Solution()\n",
+    "    print p.lengthOfLongestSubstring(s)\n",
+    "    '''\n",
+    "    another complicate solution\n",
     "    \n",
+    "    print 'hello'\n",
     "    prefix = []\n",
     "    longest = 0\n",
     "    \n",
@@ -67,8 +71,18 @@
     "        \n",
     "        index += 1\n",
     "    print longest\n",
+    "    '''\n",
     "        "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
