--- a/strStr.ipynb
+++ b/strStr.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-1"
+       "2"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -40,7 +40,7 @@
     "        return -1\n",
     "        \n",
     "Solution().strStr('mississippi','issipi')\n",
-    "#Solution().strStr('hello','ll')\n"
+    "Solution().strStr('hello','ll')\n"
    ]
   }
  ],
