last word len strip

--- a/daily_prac_leetcode/last_len.ipynb
+++ b/daily_prac_leetcode/last_len.ipynb
@@ -2,16 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "5"
+       "1"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -23,9 +30,11 @@
     "        :type s: str\n",
     "        :rtype: int\n",
     "        \"\"\"\n",
-    "        return len(s.split(' ')[-1]) \n",
+    "        arr = s.split(' ')\n",
+    "        print arr[-1]\n",
+    "        return len(arr[-1]) \n",
     "    \n",
-    "Solution().lengthOfLastWord('hello world')"
+    "Solution().lengthOfLastWord('a')"
    ]
   }
  ],
