--- a/daily_prac_leetcode/last_len.ipynb
+++ b/daily_prac_leetcode/last_len.ipynb
@@ -2,23 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "a\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "1"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -30,11 +23,10 @@
     "        :type s: str\n",
     "        :rtype: int\n",
     "        \"\"\"\n",
-    "        arr = s.split(' ')\n",
-    "        print arr[-1]\n",
+    "        arr = s.strip().split(' ')\n",
     "        return len(arr[-1]) \n",
     "    \n",
-    "Solution().lengthOfLastWord('a')"
+    "Solution().lengthOfLastWord('a ')"
    ]
   }
  ],
